# ieee-fraud-detection-mlops-platform

./: .gitignore  Dockerfile.api  Dockerfile.training  README.md  pyproject.toml
.github/workflows/: fraud-mlops-cicd.yml
artifacts/: fraud_detection_pipeline.yaml  live_alert_retraining_event.json  metrics_summary.json  test_trigger.json
configs/: training_config.yaml
docs/: index.html  project_overview.md  requirement_coverage.md  research_report.docx  research_report.md  runbook.md
docs/evidence/logs/: docker_api_metrics.txt  docker_api_predict.json  docker_predict_payload.json  github_repo_rename.json  grafana_dashboards.json  jenkins_alertmanager_last_build.json  jenkins_api.json  jenkins_job.json  jenkins_webhook_trigger_response.json  k8s_namespace_live.yaml  k8s_quota_live.yaml  k8s_rollout_live.txt  k8s_storage_live.txt  kubeflow_applications_live.txt  (+8 more)
jenkins/: Dockerfile  fraud-mlops-job.xml
jenkins/init.groovy.d/: basic-security.groovy  create-job.groovy
k8s/: inference-api-deployment.yaml  namespace.yaml  persistent-volume-claim.yaml  persistent-volume.yaml  resource-quota.yaml
kubeflow/: pipeline.py
monitoring/: alert_rules.yml  alertmanager-local.yml  alertmanager-webhook-example.yaml  prometheus-local.yml  prometheus.yml
scripts/: build_word_report.py  generate_demo_data.py  render_evidence.py
src/fraud_mlops/: __init__.py  data.py  drift.py  explainability.py  features.py  inference_api.py  intelligent_trigger.py  modeling.py  monitoring_metrics.py  train.py  utils.py
tests/: test_drift.py  test_intelligent_trigger.py
(+4 files in other folders)
